--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bomxcoctails",
+  "name": "mobx-cocktails",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,19 @@
     "@types/node": "^16.11.31",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.0",
+    "firebase": "^9.7.0",
+    "firebase-tools": "^10.7.2",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
+    "mobx-remotedev": "^0.3.6",
+    "node-sass": "^6.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "remotedev": "^0.2.9",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
